apps/sentinelflow-salesforce/force-app/main/default/objects/Zentom_Setting__mdt/fields/Callout_Mode__c.field-meta.xml
<CustomField>
    <fullName>Callout_Mode__c</fullName>
    <label>Callout Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REMOTE_SITE</fullName>
                <default>true</default>
                <label>REMOTE_SITE</label>
            </value>
            <value>
                <fullName>NAMED_CREDENTIAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>